@@ -6,6 +6,7 @@ Note: Tasks in [] can't apply for now because of python API limitation, I am loo
 	Sequencer in pr mode Alt + Arrows move step by step
 	[F9 if no active camera in scene create one befor render and delete after render]
 	in some PCs 'E' calls Scale rather then Rotate ??
+	3DsMax Adapted key map for animators
 
 # Tools
 	UV editor Target Weld
